--- a/src/components/ImageContainer/ImageContainer.css
+++ b/src/components/ImageContainer/ImageContainer.css
@@ -1,5 +1,4 @@
 .image-container {
   display: flex;
   min-width: 100%;
-  min-height: 230px;
 }
